MG-2008-08-11-0: Bugfix:     Testsuite test for SDM issue 551
                 Review:     CR

CR-2008-08-07-0: Bugfix:     Fixed minor testsuite issues
                 Review:     JG

AP-2008-08-07-0: Bugfix:     Testsuite configuration - can't change the source dir
                 Issue:      211
                 Review:     ZG

JG-2008-08-05-0: Enhancem.:  Allow running testsuite with V61AR* branch.
                 Bugfix:     Fixed system_tests/qmaster/complex.
                 Review:     EB

ZG-2008-08-05-0: Bugfix:     Adding missin variable declaration in
                             config_database/db_config_add_newdatabase()
                 Review:     AP

DG-2008-08-04-0: Cleanup:    Test qacct is sending email (severe) when
                             accounting file does not exist.
                 Review:     JG

MD-2008-08-04-0: Bugfix:     Fixed broken issue_1661 test.
                 Review:     MD

DG-2008-08-01-0: Bugfix:     Fixed binary_submission test.
                 Review:     CR

CR-2008-08-01-0: Enhancem.:  implemented build arch cache for procedure
                             resolve_build_arch_installed_libs()
                 Review:     JG

JG-2008-08-01-0: Bugfix:     Fixed a number of tests failing with 6.0 clusters.
                 Review:     CR

CR-2008-07-31-0: Bugfix:     Fixed hedeby tests:
                             o minResource test might choose wrong host for producing
                               resource in error state
                 Issue:      216
                             o reset_produced_error_resource procedure cannot startup
                               execd
                 Issue:      217
                 Review:     TB, AF

DG-2008-07-31-0: Cleanup:    Moved test local function to global procedures.
                             Fixed for failed IZ 2387 test.
                 Review:     CR

RH-2008-07-31-0: Enhancem.:  Test for executing hedeby junit tests added